# quantmini

./: .env.example  .gitignore  .readthedocs.yaml  AUTOMATION.md  CLAUDE.md  CLI.md  PIPELINE_USAGE.md  PROJECT_MEMORY.md  QUICKSTART.md  README.md  READTHEDOCS_SETUP.md  pyproject.toml
.github/workflows/: quality.yml  test.yml
config/: README_PATHS.md  fundamentals_schema.json  fundamentals_silver_schema.json  paths.yaml  pipeline_config.yaml  system_profile.yaml.example
docs/: CALENDAR_INTEGRATION.md  DAILY_PIPELINE_OPTIMIZATION_SUMMARY.md  DATA_REFRESH_STRATEGIES.md  DELISTED_STOCKS.md  HISTORICAL_DATA_LOAD_PLAN.md  METADATA_FIX_SUMMARY.md  PARALLEL_EXECUTION_GUIDE.md  PIPELINE_OPERATIONS_GUIDE.md  POLYGON_API_MIGRATION_PLAN.md  README.md  SCHEMA_FIX_SUMMARY.md  SHORT_DATA_OPTIMIZATION.md
docs/api-reference/: POLYGON_REST_API.md  qlib.md
docs/architecture/: CORPORATE_ACTIONS.md  MEDALLION_ARCHITECTURE_SCRIPTS.md  data-pipeline.md  overview.md
docs/getting-started/: DATA_CONFIGURATION.md
docs/guides/: ALPHA158_FEATURES.md  BENCHMARK_DATA_GUIDE.md  (+3 more)
docs_source/: changelog.md  conf.py  contributing.md  getting_started.md  index.rst  installation.md
examples/: QLIB_WORKFLOW_README.md  alpha158_demo.py  corporate_actions_queries.py  data_loader_example.py  qlib_workflow_config.yaml
scripts/: README.md  backfill_historical.py  check_download_status.py  convert_to_qlib.py  daily_update_parallel.sh  diagnose_schema_issues.py  historical_data_load.sh  reingest_production.py  test_alpha158_limited.py  test_market_calendar.py  validate_production_schemas.py
(+122 files in other folders)
